feat: Enhance PWA and service worker for offline support
Register service worker with relative scope and update manifest for PWA.
Introduce cache-first strategy for fetch events in service worker and a navigation strategy for SPAs.
Update cache name for service worker.

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,8 @@
 {
   "name": "FinCalc Digital",
   "short_name": "FinCalc",
-  "start_url": "./",
+  "start_url": "./index.html",
+  "scope": "./",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#1C3A5B",
