--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@google/genai": "^1.30.0",
     "lucide-react": "^0.555.0",
     "recharts": "^2.13.0",
-    "date-fns": "^2.30.0"
+    "date-fns": "^2.30.0",
+    "@supabase/supabase-js": "^2.86.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
