--- a/manifest.json
+++ b/manifest.json
@@ -10,13 +10,13 @@
   "description": "Assistente Financeiro para Negócios Digitais e Assinaturas.",
   "icons": [
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/2910/2910768.png",
+      "src": "https://placehold.co/192x192/1C3A5B/ffffff/png?text=$",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/2910/2910768.png",
+      "src": "https://placehold.co/512x512/1C3A5B/ffffff/png?text=$",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
