--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "@google/genai": "^1.30.0",
-    "recharts": "^3.5.1",
-    "lucide-react": "^0.555.0",
-    "@supabase/supabase-js": "^2.86.0"
+    "recharts": "2.12.7",
+    "lucide-react": "0.378.0",
+    "@supabase/supabase-js": "2.43.4"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
